# yellowfish

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile.decom  LICENSE  sonar-project.properties  yellowfish.hh.in
.circleci/: config.yml
scripts/: hillbillydeploy.sh
src/: CMakeLists.txt  config.cxx  config.hh  yellowfish.cxx
src/imageretrievers/: httpimageretriever.cxx  httpimageretriever.hh  imageretriever.hh  imageserver.cxx  imageserver.hh  localfile.cxx  localfile.hh  nasapod.cxx  nasapod.hh  picsum.cxx  picsum.hh  unsplash.cxx  unsplash.hh
src/net/: curl.cxx  curl.hh  nasapod.cxx  nasapod.hh
src/screens/: clock.cxx  clock.hh  colors.cxx  colors.hh  fadein.cxx  fadein.hh  fill.hh  image.cxx  image.hh  screen_error.hh  sine.cxx  sine.hh  weather.cxx  weather.hh
src/sdl/: color.hh  font.cxx  font.hh  memoryrwops.cxx  memoryrwops.hh  renderable.hh  renderer.cxx  renderer.hh  sdl.cxx  sdl.hh  sdl_error.hh  window.cxx  window.hh
src/utils/: dirlist.cxx  dirlist.hh  imageresizer.cxx  imageresizer.hh  retriever_error.hh  textrenderer.cxx  textrenderer.hh  timekeeper.cxx  timekeeper.hh
src/weatherretriever/: weather.cxx  weather.hh
systemd/: yellowfish.service
tests/: CMakeLists.txt  test-net-data.cxx
